Fixed woman img(white line on the bottom), fixed container divs of photos and rhood (added overflow: hidden)

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,6 @@
 * {
     margin: 0;
     padding: 0;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
     box-sizing: border-box;
 }
 
@@ -18,14 +16,14 @@ header {
 }
 
 .nav-head {
-    height: 48px;
+    height: 54px;
     float: left;
     position: relative;
     padding-left: 5vw;
 }
 
 .nav-head p {
-    font-size: 14px;
+    font-size: 16px;
     font-family: 'Open Sans';
     font-weight: 600;
     color: rgb(235, 235, 235);
@@ -44,7 +42,7 @@ header {
 .fa-bars {
     color: rgb(235, 235, 235);
     font-size: 22px;
-    padding: 13px;
+    padding: 16px;
 }
 
 .nav-mobi {
@@ -173,11 +171,10 @@ main {
 }
 
 .rhood {
-    height: 20vw;
+    overflow: hidden;
 }
 
 .rhood div {
-    overflow: hidden;
     height: 20vw;
     position: relative;
 }
@@ -218,8 +215,7 @@ main {
 }
 
 .photos {
-    width: 100%;
-    height: 28.7vw;
+    overflow: hidden;
 }
 
 .photos div {
@@ -233,7 +229,7 @@ main {
     height: 28.7vw;
 }
 
-img {
+.photos img {
     float: left;
     height: 28.7vw;
     width: 33.33%;
@@ -263,7 +259,6 @@ img {
     font-size: 2.6vw;
     font-weight: 600;
     font-family: 'Open Sans';
-    text-decoration: none;
 }
 
 .txt-hd a {
@@ -317,7 +312,7 @@ img {
         width: 874px;
     }
 
-    .rhood, .rhood div {
+    .rhood div {
         height: 242px;
     }
 
@@ -331,8 +326,7 @@ img {
         font-size: 54px;
     }
 
-    img,
-    .photos,
+    .photos img,
     .photos .photos-arrow {
         height: 348.7px;    
     }
@@ -357,7 +351,7 @@ img {
 }
 
 @media (max-width: 640px) {
-    img,
+    .photos img,
     .photos .photos-arrow {
         width: 100%; 
         height: 86.1vw;   
